fixed About and Pakages session from main page as it was too big on iPhones

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -739,6 +739,11 @@ footer {
         padding: 0 10px 0 10px !important;
     }
     
+    .about-main h3 {
+        font-size:1.1em;
+        padding: 0;
+    }
+
     .about-testimonial {
         width: 95%;
         height: 40% !important;
@@ -751,16 +756,16 @@ footer {
     }
 
     .about-testimonial h2 {
-        font-size:1.2em;
+        font-size:1.1em;
         padding: 0;
     }
 
     .about-testimonial h3 {
-        font-size:1.2em;
+        font-size:1.1em;
         padding: 0;
     }
 
-    #packages p {
+    #packages h1 {
         font-size: 2.5em;
         font-weight: bold;
     }
